# glue.build

./: .gitignore  CMakeLists.txt
include/glue/: function.hpp  types.hpp
include/glue/lvl1/gl/: 1.0.base.hpp  1.1.base.hpp  (+13 more)
source/common/: strings.cpp
source/lvl1/gl/: 1.1.base.cpp  1.2.base.cpp  1.3.base.cpp  1.4.base.cpp  3.0.compatibility.cpp  3.1.compatibility.cpp  3.2.base.cpp  3.2.core.cpp  3.3.base.cpp  3.3.compatibility.cpp  4.2.base.cpp  4.2.core.cpp  4.3.base.cpp  4.4.base.cpp  4.5.core.cpp  4.6.base.cpp  4.6.compatibility.cpp  4.6.core.cpp
source/lvl1/gles1/: 1.0.base.cpp  1.0.common.cpp
source/lvl1/gles2/: 2.0.base.cpp  3.0.base.cpp  3.1.base.cpp  3.2.base.cpp
source/lvl2/gl/: 1.0.base.cpp  1.1.base.cpp  1.4.base.cpp  2.0.base.cpp  2.1.base.cpp  3.0.base.cpp  3.0.compatibility.cpp  3.1.base.cpp  3.1.compatibility.cpp  3.2.base.cpp  3.2.compatibility.cpp  3.2.core.cpp  3.3.base.cpp  3.3.compatibility.cpp  3.3.core.cpp  4.0.base.cpp  4.0.compatibility.cpp  4.0.core.cpp  4.1.base.cpp  4.1.compatibility.cpp  4.1.core.cpp  4.2.base.cpp  4.2.compatibility.cpp  4.2.core.cpp  4.3.base.cpp  4.3.compatibility.cpp  4.3.core.cpp  4.4.base.cpp  4.4.compatibility.cpp  4.4.core.cpp  4.5.base.cpp  4.5.compatibility.cpp  4.5.core.cpp  4.6.base.cpp  4.6.compatibility.cpp  4.6.core.cpp
source/lvl2/gles1/: 1.0.common.cpp
source/lvl2/gles2/: 2.0.base.cpp  3.0.base.cpp  3.1.base.cpp  3.2.base.cpp
source/lvl2/glsc2/: 2.0.base.cpp
src/: CMakeLists.txt
src/include/glue/: math.hpp  meta.hpp  utility.hpp
src/source/common/: strings.hpp
tests/: basic.cpp
(+187 files in other folders)
